WIP on rail data load perf